Added tests for options

--- a/test/testingground.html
+++ b/test/testingground.html
@@ -10,6 +10,7 @@
         <script src="../node_modules/jquery/dist/jquery.js"></script>
         <script src="../node_modules/qunit/qunit/qunit.js"></script>
         <script src="../jq-tag-input.js"></script>
+        <script src="../node_modules/typeahead.js/dist/typeahead.bundle.js"></script>
 
         <script src="tests.js"></script>
     </head>
