Ran prettier over a bunch of files

--- a/test/testingground.html
+++ b/test/testingground.html
@@ -3,9 +3,9 @@
         <title>
             Testing jq-tag-input
         </title>
-        <meta charset="utf-8">
+        <meta charset="utf-8" />
 
-        <link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css">
+        <link rel="stylesheet" href="../node_modules/qunit/qunit/qunit.css" />
 
         <script src="../node_modules/jquery/dist/jquery.js"></script>
         <script src="../node_modules/qunit/qunit/qunit.js"></script>
@@ -17,7 +17,7 @@
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture">
-            <input id="tag-input" type="text">
+            <input id="tag-input" type="text" />
         </div>
     </body>
 </html>
